--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,14 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+body {
+    font-size: 16px;
+    font-family: Montserrat, Arial, sans-serif;
+}
+
 nav {
     background-color: steelblue;
     padding: 10px;
@@ -11,14 +22,26 @@ nav a{
 
 h1 {
     color: steelblue;
+    padding: .5rem
 }
 
-img {
-    width: 400px;
+main {
+    max-width: 640px;
+}
+
+main img {
+    width: 150px;
     height: auto;
-    border: 1px solid steelblue;
+    border: 1px solid rgb(32, 31, 36);
     padding: 2px;
-    box-shadow: 0 0 30px gray;
+    box-shadow: 0 0 30px rgb(31, 29, 29);
+    float: right;
+    margin: 0 0 1rem 1rem;   
+}
+
+p {
+    margin: 1rem;
+    padding: 0;
 }
 
 div {
@@ -30,25 +53,22 @@ div {
     color: #ffffff;
 }
 
-* {
-    margin: 0;
-    padding:0;
-    box-sizing: border-box;
-}
-
-main {
-    max-width: 840px;
-}
-
 aside {
     width: 20rem;
-    margin: 1rem;
+    /*margin: 1rem;
     border: 1px solid rgba(0, 0, 0, 0.02);
     padding: 1rem;
     background-color: #eee;
-    color: #333;
+    color: #333;*/
     text-align: center;
+    position: relative;
+}
 
+aside h2 {
+    position: absolute;
+    top: 10px;
+    left: 90px;
+    color: rgb(8, 8, 8); /* Text color */
 }
 
 aside img {
@@ -56,17 +76,30 @@ aside img {
     height: auto;
 }
 
-main img {
-    width: 150px;
-    height: auto;
-}
-
-p {
-    padding: 0;
-}
-
 footer {
     margin: 15px;
     border: 1px solid #000;
     text-align: center;
 }
+
+/* Class Selectors */
+.box {
+    margin: 2rem;
+    padding: 1rem;
+    border: 1px solid #ccc;
+    background-color: #947f93;
+    color: #333;
+}
+/*img {
+    width: 400px;
+    height: auto;
+    border: 1px solid steelblue;
+    padding: 2px;
+    box-shadow: 0 0 30px gray;
+}*/
+
+/*aside h2{
+    position: relative;
+    top: 35px;
+    left: 30px;
+}*/
