--- a/wwr/rafting.css
+++ b/wwr/rafting.css
@@ -2,8 +2,7 @@
 
 .montserrat-uniquifier {
   font-family: "Montserrat", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: weight;
+  font-weight: 100;
   font-style: normal;
 }
 
