--- a/styles/styles.css
+++ b/styles/styles.css
@@ -5,28 +5,41 @@
 }
 
 body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
     font-size: 16px;
     font-family: Montserrat, Arial, sans-serif;
 }
 
 nav {
-    background-color: steelblue;
-    padding: 10px;
+    background-color: rgb(93, 105, 20);
+    padding: 1rem;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
 }
 
-nav a{
-    color: white;
-    display: flexbox;
-    padding: 20px;
+nav a {
+    display: block;
+    padding: 0.5rem;
+    text-decoration: none;
+    font-weight: 700;
+    font-size: 1.2rem;
+    color: #fff;
 }
 
 h1 {
     color: steelblue;
-    padding: .5rem
+    padding: .5rem;
+    border-bottom: 2px solid #333;
+    margin: auto;
 }
 
 main {
-    max-width: 640px;
+    max-width: 840px;
 }
 
 main img {
@@ -36,7 +49,7 @@ main img {
     padding: 2px;
     box-shadow: 0 0 30px rgb(31, 29, 29);
     float: right;
-    margin: 0 0 1rem 1rem;   
+    margin: 4px 4px 1rem 1rem;   
 }
 
 p {
@@ -53,17 +66,6 @@ p {
     color: #ffffff;
 }*/
 
-aside {
-    width: 20rem;
-    /*margin: 1rem;
-    border: 1px solid rgba(0, 0, 0, 0.02);
-    padding: 1rem;
-    background-color: #eee;
-    color: #333;*/
-    text-align: center;
-    position: relative;
-}
-
 aside h2 {
     position: absolute;
     top: 10px;
@@ -74,11 +76,11 @@ aside h2 {
 aside img {
     width: 200px;
     height: auto;
+    padding: 0rem;
 }
 
 footer {
-    margin: 15px;
-    border: 1px solid #000;
+    border-top: 1px solid #000;
     text-align: center;
 }
 
@@ -87,19 +89,33 @@ footer {
     margin: 2rem;
     padding: 1rem;
     border: 1px solid #ccc;
-    background-color: #947f93;
+    background-color: #70b1ca;
     color: #333;
 }
-/*img {
-    width: 400px;
-    height: auto;
-    border: 1px solid steelblue;
-    padding: 2px;
-    box-shadow: 0 0 30px gray;
-}*/
 
-/*aside h2{
+header, footer {
+    max-width: 840px;
+    margin: 0 auto;
+}
+
+.grid {
+    display: grid;
+    align-items: center;
+  }
+  
+  main {
+    grid-column: 2/3;
+    margin: 1rem;
+  }
+  
+  aside {
+    width: 20rem;
     position: relative;
-    top: 35px;
-    left: 30px;
-}*/
+    grid-column: 1/2;
+    grid-row: 1/2;
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    padding: 20rem;
+    background-color: darkkhaki;
+    color: #080808;
+    text-align: center;
+  }
