--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,11 +37,6 @@ h1 {
     border-bottom: 2px solid #333;
     margin: auto;
 }
-
-main {
-    max-width: 840px;
-}
-
 main img {
     width: 150px;
     height: auto;
@@ -93,6 +88,11 @@ footer {
     color: #333;
 }
 
+header, footer {
+    max-width: 840px;
+    margin: 0 auto;
+}
+
 .grid {
     display: grid;
     align-items: center;
@@ -101,6 +101,7 @@ footer {
   main {
     grid-column: 2/3;
     margin: 1rem;
+    max-width: 840px;
   }
   
   aside {
