--- a/wwr/contact.css
+++ b/wwr/contact.css
@@ -58,7 +58,7 @@ h1, h2 {
     font-size: 18px;
 }
 
-.map {
+.map-container {
     text-align: center;
     margin-top: 20px;
 }
@@ -116,6 +116,7 @@ h1, h2 {
     border: none;
     border-radius: 5px;
     font-size: 18px;
+    cursor: pointer;
 }
 
 .contact-form button:hover {
@@ -128,7 +129,6 @@ footer {
     color: rgb(7, 7, 7);
     padding: 20px;
     margin-top: 40px;
-    border-radius: 20px;
     display: flex;
     align-items: center;
     flex-direction: column;
