--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -5,14 +5,14 @@
 :root {
     --primary-color: #333;
     --secondary-color: #555;
-    --accent-color: #f9f9f9;
-    --additional-accent-color: #ccc;
+    --accent1-color: #f9f9f9;
+    --accent2-color: #ccc;
     --heading-font: 'Montserrat', sans-serif;
     --paragraph-font: 'Montserrat', sans-serif;
-    --nav-bg-color: #333;
+    --nav-background-color: #333;
     --nav-link-color: white;
     --nav-hover-link-color: white;
-    --nav-hover-bg-color: #555;
+    --nav-hover-background-color: #555;
 }
 
 /* Body styles */
